src/getpot/GetPotParser.output
Terminals unused in grammar

   "end of line"
   '{'
   '}'
   ','
   ">="
   "<="
   "!="
   "=="
   "&&"
   "||"
   '*'
   '/'
   '+'
   '^'
   '&'
   "quoted string"
   "start of unit of execution"
   "end of unit of execution"
   "declarator"
   "value"


Grammar

    0 $accept: start "end of file"

    1 assign: ASSIGN

    2 object_term: "block terminator"

    3 lbracket: LBRACKET

    4 rbracket: RBRACKET

    5 object_decl: lbracket string rbracket

    6 object_term: lbracket rbracket

    7 object_member: primitive
    8              | keyedvalue
    9              | comment

   10 object_members: object_member
   11               | object_members object_member

   12 object: object_decl object_term
   13       | object_decl object_members object_term

   14 integer: "integer"

   15 real: "real"

   16 unquoted_string: "string"

   17 VALUE: "integer"
   18      | "real"
   19      | "string"

   20 value: VALUE

   21 DECL: "string"

   22 decl: DECL

   23 quote: QUOTE

   24 string: unquoted_string

   25 primitive: integer
   26          | real
   27          | string

   28 array_member: value

   29 array_members: array_member
   30              | array_members array_member

   31 array: quote array_members quote

   32 keyedvalue: decl assign value
   33           | decl assign array

   34 comment: "comment"

   35 start: %empty
   36      | start comment
   37      | start keyedvalue
   38      | start object


Terminals, with rules where they appear

"end of file" (0) 0
'&' (38)
'*' (42)
'+' (43)
',' (44)
'/' (47)
'^' (94)
'{' (123)
'}' (125)
error (256)
"end of line" (258)
LBRACKET (259) 3
RBRACKET (260) 4
ASSIGN (261) 1
">=" (262)
"<=" (263)
"!=" (264)
"==" (265)
"&&" (266)
"||" (267)
QUOTE (268) 23
"integer" (269) 14 17
"real" (270) 15 18
"string" (271) 16 19 21
"quoted string" (272)
"comment" (273) 34
"start of unit of execution" (274)
"end of unit of execution" (275)
"block terminator" (276) 2
"declarator" (277)
"value" (278)


Nonterminals, with rules where they appear

$accept (32)
    on left: 0
assign (33)
    on left: 1, on right: 32 33
object_term (34)
    on left: 2 6, on right: 12 13
lbracket (35)
    on left: 3, on right: 5 6
rbracket (36)
    on left: 4, on right: 5 6
object_decl (37)
    on left: 5, on right: 12 13
object_member (38)
    on left: 7 8 9, on right: 10 11
object_members (39)
    on left: 10 11, on right: 11 13
object (40)
    on left: 12 13, on right: 38
integer (41)
    on left: 14, on right: 25
real (42)
    on left: 15, on right: 26
unquoted_string (43)
    on left: 16, on right: 24
VALUE (44)
    on left: 17 18 19, on right: 20
value (45)
    on left: 20, on right: 28 32
DECL (46)
    on left: 21, on right: 22
decl (47)
    on left: 22, on right: 32 33
quote (48)
    on left: 23, on right: 31
string (49)
    on left: 24, on right: 5 27
primitive (50)
    on left: 25 26 27, on right: 7
array_member (51)
    on left: 28, on right: 29 30
array_members (52)
    on left: 29 30, on right: 30 31
array (53)
    on left: 31, on right: 33
keyedvalue (54)
    on left: 32 33, on right: 8 37
comment (55)
    on left: 34, on right: 9 36
start (56)
    on left: 35 36 37 38, on right: 0 36 37 38


State 0

    0 $accept: . start "end of file"

    $default  reduce using rule 35 (start)

    start  go to state 1


State 1

    0 $accept: start . "end of file"
   36 start: start . comment
   37      | start . keyedvalue
   38      | start . object

    "end of file"  shift, and go to state 2
    LBRACKET       shift, and go to state 3
    "string"       shift, and go to state 4
    "comment"      shift, and go to state 5

    lbracket     go to state 6
    object_decl  go to state 7
    object       go to state 8
    DECL         go to state 9
    decl         go to state 10
    keyedvalue   go to state 11
    comment      go to state 12


State 2

    0 $accept: start "end of file" .

    $default  accept


State 3

    3 lbracket: LBRACKET .

    $default  reduce using rule 3 (lbracket)


State 4

   21 DECL: "string" .

    $default  reduce using rule 21 (DECL)


State 5

   34 comment: "comment" .

    $default  reduce using rule 34 (comment)


State 6

    5 object_decl: lbracket . string rbracket

    "string"  shift, and go to state 13

    unquoted_string  go to state 14
    string           go to state 15


State 7

   12 object: object_decl . object_term
   13       | object_decl . object_members object_term

    LBRACKET            shift, and go to state 3
    "integer"           shift, and go to state 16
    "real"              shift, and go to state 17
    "string"            shift, and go to state 18
    "comment"           shift, and go to state 5
    "block terminator"  shift, and go to state 19

    object_term      go to state 20
    lbracket         go to state 21
    object_member    go to state 22
    object_members   go to state 23
    integer          go to state 24
    real             go to state 25
    unquoted_string  go to state 14
    DECL             go to state 9
    decl             go to state 10
    string           go to state 26
    primitive        go to state 27
    keyedvalue       go to state 28
    comment          go to state 29


State 8

   38 start: start object .

    $default  reduce using rule 38 (start)


State 9

   22 decl: DECL .

    $default  reduce using rule 22 (decl)


State 10

   32 keyedvalue: decl . assign value
   33           | decl . assign array

    ASSIGN  shift, and go to state 30

    assign  go to state 31


State 11

   37 start: start keyedvalue .

    $default  reduce using rule 37 (start)


State 12

   36 start: start comment .

    $default  reduce using rule 36 (start)


State 13

   16 unquoted_string: "string" .

    $default  reduce using rule 16 (unquoted_string)


State 14

   24 string: unquoted_string .

    $default  reduce using rule 24 (string)


State 15

    5 object_decl: lbracket string . rbracket

    RBRACKET  shift, and go to state 32

    rbracket  go to state 33


State 16

   14 integer: "integer" .

    $default  reduce using rule 14 (integer)


State 17

   15 real: "real" .

    $default  reduce using rule 15 (real)


State 18

   16 unquoted_string: "string" .  [LBRACKET, "integer", "real", "string", "comment", "block terminator"]
   21 DECL: "string" .  [ASSIGN]

    ASSIGN    reduce using rule 21 (DECL)
    $default  reduce using rule 16 (unquoted_string)


State 19

    2 object_term: "block terminator" .

    $default  reduce using rule 2 (object_term)


State 20

   12 object: object_decl object_term .

    $default  reduce using rule 12 (object)


State 21

    6 object_term: lbracket . rbracket

    RBRACKET  shift, and go to state 32

    rbracket  go to state 34


State 22

   10 object_members: object_member .

    $default  reduce using rule 10 (object_members)


State 23

   11 object_members: object_members . object_member
   13 object: object_decl object_members . object_term

    LBRACKET            shift, and go to state 3
    "integer"           shift, and go to state 16
    "real"              shift, and go to state 17
    "string"            shift, and go to state 18
    "comment"           shift, and go to state 5
    "block terminator"  shift, and go to state 19

    object_term      go to state 35
    lbracket         go to state 21
    object_member    go to state 36
    integer          go to state 24
    real             go to state 25
    unquoted_string  go to state 14
    DECL             go to state 9
    decl             go to state 10
    string           go to state 26
    primitive        go to state 27
    keyedvalue       go to state 28
    comment          go to state 29


State 24

   25 primitive: integer .

    $default  reduce using rule 25 (primitive)


State 25

   26 primitive: real .

    $default  reduce using rule 26 (primitive)


State 26

   27 primitive: string .

    $default  reduce using rule 27 (primitive)


State 27

    7 object_member: primitive .

    $default  reduce using rule 7 (object_member)


State 28

    8 object_member: keyedvalue .

    $default  reduce using rule 8 (object_member)


State 29

    9 object_member: comment .

    $default  reduce using rule 9 (object_member)


State 30

    1 assign: ASSIGN .

    $default  reduce using rule 1 (assign)


State 31

   32 keyedvalue: decl assign . value
   33           | decl assign . array

    QUOTE      shift, and go to state 37
    "integer"  shift, and go to state 38
    "real"     shift, and go to state 39
    "string"   shift, and go to state 40

    VALUE  go to state 41
    value  go to state 42
    quote  go to state 43
    array  go to state 44


State 32

    4 rbracket: RBRACKET .

    $default  reduce using rule 4 (rbracket)


State 33

    5 object_decl: lbracket string rbracket .

    $default  reduce using rule 5 (object_decl)


State 34

    6 object_term: lbracket rbracket .

    $default  reduce using rule 6 (object_term)


State 35

   13 object: object_decl object_members object_term .

    $default  reduce using rule 13 (object)


State 36

   11 object_members: object_members object_member .

    $default  reduce using rule 11 (object_members)


State 37

   23 quote: QUOTE .

    $default  reduce using rule 23 (quote)


State 38

   17 VALUE: "integer" .

    $default  reduce using rule 17 (VALUE)


State 39

   18 VALUE: "real" .

    $default  reduce using rule 18 (VALUE)


State 40

   19 VALUE: "string" .

    $default  reduce using rule 19 (VALUE)


State 41

   20 value: VALUE .

    $default  reduce using rule 20 (value)


State 42

   32 keyedvalue: decl assign value .

    $default  reduce using rule 32 (keyedvalue)


State 43

   31 array: quote . array_members quote

    "integer"  shift, and go to state 38
    "real"     shift, and go to state 39
    "string"   shift, and go to state 40

    VALUE          go to state 41
    value          go to state 45
    array_member   go to state 46
    array_members  go to state 47


State 44

   33 keyedvalue: decl assign array .

    $default  reduce using rule 33 (keyedvalue)


State 45

   28 array_member: value .

    $default  reduce using rule 28 (array_member)


State 46

   29 array_members: array_member .

    $default  reduce using rule 29 (array_members)


State 47

   30 array_members: array_members . array_member
   31 array: quote array_members . quote

    QUOTE      shift, and go to state 37
    "integer"  shift, and go to state 38
    "real"     shift, and go to state 39
    "string"   shift, and go to state 40

    VALUE         go to state 41
    value         go to state 45
    quote         go to state 48
    array_member  go to state 49


State 48

   31 array: quote array_members quote .

    $default  reduce using rule 31 (array)


State 49

   30 array_members: array_members array_member .

    $default  reduce using rule 30 (array_members)
